--- a/main.html
+++ b/main.html
@@ -32,13 +32,13 @@
 			</tr>
 		</tbody>
 	</table>
-
+	<h2>List of medias</h2>
 	<ol>
 		<li>
 			<img src="https://picsum.photos/id/123/200/300" alt="Image not found"/>
 		</li>
 		<li>
-			<video controls>
+			<video controls width="300">
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/>
 			</video>
 		</li>
